src/FinancialForce Accounting/objects/SummarizationRunInformation__c.object
<CustomObject>
    <description>This object is deprecated.</description>
    <fields>
        <fullName>EndTime__c</fullName>
        <label>End Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LastAttemptedInstance__c</fullName>
        <label>Last Attempted Instance</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LastSuccessfulInstance__c</fullName>
        <label>Last Successful Instance</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MassDeleteControlRecord__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Mass Delete Control Record</label>
        <referenceTo>MassDeleteControlRecord__c</referenceTo>
        <relationshipLabel>MassDeleteControlRecord</relationshipLabel>
        <relationshipName>MassDeleteControlRecord</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>StartTime__c</fullName>
        <label>Start Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SummarizationTemplate__c</fullName>
        <label>Summarization Template</label>
        <referenceTo>SummarizationTemplate__c</referenceTo>
        <relationshipLabel>SummarizationRunInformation</relationshipLabel>
        <relationshipName>SummarizationRunInformation</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>zDeprecated:Summarization Run Info</label>
    <nameField>
        <displayFormat>SRI-{000000}</displayFormat>
        <label>Summarization Run Information</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Summarization Run Information</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>